Implemented Oauth to make the API a functional secured resource server, tested
Took 49 minutes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ logging.level.org.flywaydb=debug
 spring.security.user.name=admin
 spring.security.user.password=1
 logging.level.org.springframework.security=DEBUG
+
+auth0.audience=https://musiq/api
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-f3caunzx.eu.auth0.com/
